tests/ui/endpoint/custom_method_invalid_type.stderr
error[E0308]: mismatched types
 --> $DIR/custom_method_invalid_type.rs:8:21
  |
8 | #[endpoint(method = "String::new()", uri = "custom_read")]
  | --------------------^^^^^^^^^^^^^^^-----------------------
  | |                   |
  | |                   expected struct `Method`, found struct `std::string::String`
  | expected `Method` because of return type
